# Text2Pic

./: Makefile  README.md  pyproject.toml
.github/workflows/: app.yml
src/: drawing.py  handler.py  main.py  server.py  utils.py
src/images/: text_processing.py  training.py
src/nums/: builders.py  cgan.py  training.py
tests/: test_handler.py  test_training.py
