[tool.poetry]
name = "text2pic"
version = "0.1.0"
description = "Final Degree Project - Generate images given a description"
authors = ["Carlota de la Vega <carlotadlavega@correo.ugr.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.7,<=3.11"
ruff = "0.4.2"
keras = "^3.3.3"
tensorflow = "^2.16.1"
imageio = "^2.34.1"
pytest-mock = "^3.14.0"

[tool.poetry.dev-dependencies]
pytest = "8.1.1"
pytest-cov = "5.0.0"
pylint = "2.17.5"
black = "23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = []

[tool.ruff]
line-length = 120